



########### install files ###############

install( FILES  results_stylesheet.xsl  DESTINATION ${DATA_INSTALL_DIR}/klinkstatus/styles)




#original Makefile.am contents follow:

#styles_DATA = \
#	results_stylesheet.xsl
#
#stylesdir = $(kde_datadir)/klinkstatus/styles
#EXTRA_DIST = $(styles_DATA)
#
