INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = celltooltip.h sessionwidget.h tablelinkstatus.h tabwidgetsession.h klshistorycombo.h
libui_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES =  libui.la
libui_la_SOURCES = celltooltip.cpp sessionwidgetbase.ui sessionwidget.cpp tablelinkstatus.cpp tabwidgetsession.cpp klshistorycombo.cpp
