



########### install files ###############

install( FILES  304.png  DESTINATION ${DATA_INSTALL_DIR}/klinkstatuspart/pics)

kde4_install_icons( ${ICON_INSTALL_DIR}  hicolor )




#original Makefile.am contents follow:

#klinkstatusicondir = $(kde_datadir)/klinkstatuspart/pics
#
#klinkstatusicon_DATA = 304.png
#KDE_ICON = bug
